--- a/control/key.html
+++ b/control/key.html
@@ -234,6 +234,7 @@
 <tr><td>Shift + Z</td><td>그룹보기</td></tr>
 <tr><td>Shift + O</td><td>Network Box</td></tr>
 <tr><td>Shift + P</td><td>Sticky 노트</td></tr>
+<tr><td>Shift</td><td>Shft키를 누르고 노드를 움직이면 상위노드들도 같이 이동</td></tr>
 <tr><td>Ctrl + I</td><td>Background Images: Enable/Disable    // Shift + I 혹은 Labs &gt; Sticker Placer</td></tr>
 <tr><td>Ctrl + F</td><td>노드 찾기</td></tr>
 <tr><td>Alt</td><td>선을 끌어당기고 있는 상태에서 이음 노드 추가.</td></tr>
@@ -247,6 +248,10 @@
 <tr><td>W</td><td>진한 보라색</td></tr>
 <tr><td>E</td><td>연한 보라색 미리보기 토글</td></tr>
 <tr><td><strong>R</strong></td><td>파랑색 선택된것들 돌아가며 선택</td></tr>
+</tbody></table>
+</div><div class="table-wrapper"><table><thead><tr><th>Composite View</th><th></th></tr></thead><tbody>
+<tr><td>Shift + H</td><td>Fit To Viewport</td></tr>
+<tr><td>` / 1 / 2 / 3 / 4</td><td>all / r / g / b / a 채널</td></tr>
 </tbody></table>
 </div>
 <h2 id="keyframe"><a class="header" href="#keyframe">Keyframe</a></h2>
