--- a/etc/english_word.html
+++ b/etc/english_word.html
@@ -179,8 +179,9 @@
 <tr><td>erode</td><td>침식/풍화 되다</td><td></td></tr>
 <tr><td>slump</td><td>침체/무너진</td><td></td></tr>
 <tr><td>sediment</td><td>침전/퇴적물</td><td></td></tr>
-<tr><td>debris</td><td>잔해/쓰레기</td><td></td></tr>
+<tr><td>debris</td><td>지형이 무너질 때 생기는 잔해/쓰레기</td><td></td></tr>
 <tr><td>bedrock</td><td>기반/기반암</td><td></td></tr>
+<tr><td>sweep</td><td>쓸기/ 휘두름</td><td></td></tr>
 </tbody></table>
 </div>
 <hr />
@@ -202,6 +203,23 @@ Skew - 왜곡하다, 비스듬히 움직이다</p>
 <p>topology 폴리곤 구조와 배열
 retopology 토폴리지 재구성
 principled - 절조 있는, 원칙에 입각한</p>
+<p>ridge - 등 / 봉우리 / 튀어나온 부분</p>
+<p>Angle of repose : 안식각, 휴식각 또는 임계 안식각. 이 각도에서 경사면의 재료는 미끄러지기 직전이다.</p>
+<p>spherify - 구형화하다
+trunk - 나무의 몸통</p>
+<ul>
+<li>isosurface
+<ul>
+<li>등치선의 3차원 형태이며, 3차원에서 일정한 스칼라 값(예: 압력, 온도, 속도, 밀도)을 갖는 점들의 모임을 나타내는 연속된 표면이다. 등가면은 컴퓨터 그래픽의 주요 주제이며, 특히 전산 유체 역학에서 시각화 방법으로 자주 사용된다.</li>
+<li>iso- → 같다, 동일하다 (equal)</li>
+<li>surface → 표면, 면 (surface)</li>
+<li>그래서 isosurface란 → "어떤 3D 공간 안에서 특정 값이 동일한 지점을 연결한 면" 을 말해.</li>
+</ul>
+</li>
+</ul>
+<p>isometry - 등거리 변환
+sliver - (깨지거나 잘라 낸) 조각 - Divide 노드</p>
+<p>pre (미리) + fabricated (제작된)</p>
 
                     </main>
 
