--- a/etc/reference.html
+++ b/etc/reference.html
@@ -241,6 +241,8 @@
 </ul>
 </li>
 </ul>
+<p><a href="https://www.youtube.com/watch?v=NfizT369g60">Procedural World Generation of Ubisoft’s Far Cry 5 | Etienne Carrier | Houdini HIVE Utrecht</a>
+<a href="https://www.youtube.com/watch?v=FodXp5BkENk">Building the World of 'The Ascent'</a></p>
 <h2 id="p"><a class="header" href="#p">P</a></h2>
 <ul>
 <li>
@@ -460,6 +462,19 @@
 <li>https://blog.naver.com/furyedea255</li>
 <li><a href="https://www.youtube.com/watch?v=DbIKoNfSSGc">블리자드 배경아티스트 귬규영 -2부-</a></li>
 <li>https://www.artstation.com/peter_k_lee</li>
+</ul>
+<h3 id="matthew-vitalone"><a class="header" href="#matthew-vitalone">Matthew Vitalone</a></h3>
+<ul>
+<li><a href="https://vimeo.com/261901539">Creating Real-Time Oceans for Call of Duty: WWII | Matt Vitalone | GDC 2018</a>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=mMKViq1Bv8M">youtube</a></li>
+</ul>
+</li>
+</ul>
+<h3 id="radu-cius"><a class="header" href="#radu-cius">Radu Cius</a></h3>
+<ul>
+<li><a href="https://www.artstation.com/raducius">https://www.artstation.com/raducius</a></li>
+<li><a href="https://rart.gumroad.com/">https://rart.gumroad.com/</a></li>
 </ul>
 
                     </main>
