--- a/node/geometry/geo_step.html
+++ b/node/geometry/geo_step.html
@@ -185,7 +185,7 @@
 <li>베벌 distance 0.5</li>
 <li>퓨즈</li>
 </ul>
-<h2 id="체우기"><a class="header" href="#체우기">체우기</a></h2>
+<h2 id="채우기"><a class="header" href="#채우기">채우기</a></h2>
 <ul>
 <li>중심축을 정해 transform해서 띄워주고</li>
 <li>mirror - reverse normal : No</li>
