--- a/tutorial/project_titan.html
+++ b/tutorial/project_titan.html
@@ -775,7 +775,7 @@ detail:
 <li>Connect Adjacent Pieces - 이렇게 하면 primitive갯수가 늘어나버림
 <ul>
 <li>Adjacent Points</li>
-<li>Search Radious: 10</li>
+<li>Search Radius: 10</li>
 </ul>
 </li>
 <li>Convert Line</li>
@@ -844,7 +844,7 @@ detail:
 </ul>
 <h3 id="6--use-trimsheet-textures"><a class="header" href="#6--use-trimsheet-textures">6 | Use Trimsheet Textures</a></h3>
 <ul>
-<li>Sweap에서 Compute UVs</li>
+<li>Sweep에서 Compute UVs</li>
 </ul>
 <p>UV를 수평으로</p>
 <ul>
