--- a/etc/snippet-node.html
+++ b/etc/snippet-node.html
@@ -240,6 +240,11 @@
 <ul>
 <li>Second U : 1 - ch("domainu1")</li>
 </ul>
+<h3 id="선에서-가운데점만-뽑기"><a class="header" href="#선에서-가운데점만-뽑기">선에서 가운데점만 뽑기</a></h3>
+<ul>
+<li>First U : 0.5</li>
+<li>Extract 탭 선택</li>
+</ul>
 <h2 id="group"><a class="header" href="#group">Group</a></h2>
 <h3 id="group의-이름을-노드의-이름으로"><a class="header" href="#group의-이름을-노드의-이름으로">Group의 이름을 노드의 이름으로</a></h3>
 <ul>
@@ -298,10 +303,6 @@
 <li>Facet으로 Remove Inline Points 하거나</li>
 <li>Refine으로 Unrefine탭 사용</li>
 </ul>
-<h2 id="sweep"><a class="header" href="#sweep">Sweep</a></h2>
-<ul>
-<li>Surface Shape : Ribbon / Columns: 1로하면 라인따라 트랙모양으로 변함</li>
-</ul>
 <h2 id="띄엄띄엄-선"><a class="header" href="#띄엄띄엄-선">띄엄띄엄 선</a></h2>
 <ul>
 <li>라인을 Resample</li>
@@ -313,6 +314,99 @@
 </ul>
 </li>
 </ul>
+<h2 id="라인에-원하는-수만큼-점-추가"><a class="header" href="#라인에-원하는-수만큼-점-추가">라인에 원하는 수만큼 점 추가</a></h2>
+<ul>
+<li>Resample
+<ul>
+<li>Maximum Segment Length 체크해제</li>
+<li>Maximum Segments 체크하기</li>
+</ul>
+</li>
+</ul>
+<h2 id="링형을-sweep시-시작-끝을-부분이-끊기는-현상-해결-open-curve-issue"><a class="header" href="#링형을-sweep시-시작-끝을-부분이-끊기는-현상-해결-open-curve-issue">링형을 sweep시 시작-끝을 부분이 끊기는 현상 해결 (Open Curve Issue)</a></h2>
+<ul>
+<li>
+<p>방법 1</p>
+<ul>
+<li>시작-끝 부분을 이어버리는것</li>
+<li>Fuse / PolyFrame / Sweep</li>
+</ul>
+</li>
+<li>
+<p>방법 2</p>
+<ul>
+<li>시작-끝 부분의 노말을 동기화</li>
+<li>PolyFrame 으로 선의 Tangent를 노말을 할당해서 노말이 선따라 가게하고
+<ul>
+<li>TangentName: N</li>
+</ul>
+</li>
+<li>Wrangle (detail) 로 끝점의 노말을 시작 점의 노말로 셋팅한다
+<pre><code class="language-vex">vector first_N = point(0, "N", 0);
+int last_pnt = npoints(0) - 1;
+setpointattrib(0, "N", last_pnt, first_N);
+</code></pre>
+</li>
+<li>Sweep</li>
+</ul>
+</li>
+<li>
+<p>원인</p>
+<ul>
+<li>Fuse를 안했거나</li>
+<li>Ends에서 Unroll with New Points로 새 포인트를 넣을 경우</li>
+</ul>
+</li>
+</ul>
+<h2 id="링-2개-사이-채우기"><a class="header" href="#링-2개-사이-채우기">링 2개 사이 채우기</a></h2>
+<p>링 하나가 프리미티브 하나라고 가정</p>
+<ul>
+<li>Group: Edges 으로 A/B를 지정</li>
+<li>Merge</li>
+<li>Poly Bridge
+<ul>
+<li>Group : A
+<ul>
+<li>Divide Into : Individual Elements</li>
+<li>Reverse Winding</li>
+</ul>
+</li>
+<li>Group : B
+<ul>
+<li>Divide Into : Individual Elements</li>
+<li>Reverse Winding</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<h2 id="라인-점에서-선마다-프리미티브-붙이기"><a class="header" href="#라인-점에서-선마다-프리미티브-붙이기">라인 점에서 선마다 프리미티브 붙이기</a></h2>
+<ul>
+<li>Convert Line을 사용하거나</li>
+<li>Carv를 이용함
+<ul>
+<li>First U : 0</li>
+<li>Second U : 1</li>
+<li>Break Points
+<ul>
+<li>Cut At Internal U Breakpoints</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<h2 id="스택"><a class="header" href="#스택">스택</a></h2>
+<ul>
+<li>Copy And Transform
+<ul>
+<li>Translate.y : bbox(0, D_YSIZE)</li>
+</ul>
+</li>
+</ul>
+<h2 id="uv-texture"><a class="header" href="#uv-texture">UV Texture</a></h2>
+<p>Texture Type : Arc Length Spline
+Attribute Class : Point
+Scale.x : arclen(0, 0, 0, 1)</p>
 
                     </main>
 
