--- a/print.html
+++ b/print.html
@@ -244,6 +244,7 @@
 <tr><td>Shift + Z</td><td>그룹보기</td></tr>
 <tr><td>Shift + O</td><td>Network Box</td></tr>
 <tr><td>Shift + P</td><td>Sticky 노트</td></tr>
+<tr><td>Shift</td><td>Shft키를 누르고 노드를 움직이면 상위노드들도 같이 이동</td></tr>
 <tr><td>Ctrl + I</td><td>Background Images: Enable/Disable    // Shift + I 혹은 Labs &gt; Sticker Placer</td></tr>
 <tr><td>Ctrl + F</td><td>노드 찾기</td></tr>
 <tr><td>Alt</td><td>선을 끌어당기고 있는 상태에서 이음 노드 추가.</td></tr>
@@ -257,6 +258,10 @@
 <tr><td>W</td><td>진한 보라색</td></tr>
 <tr><td>E</td><td>연한 보라색 미리보기 토글</td></tr>
 <tr><td><strong>R</strong></td><td>파랑색 선택된것들 돌아가며 선택</td></tr>
+</tbody></table>
+</div><div class="table-wrapper"><table><thead><tr><th>Composite View</th><th></th></tr></thead><tbody>
+<tr><td>Shift + H</td><td>Fit To Viewport</td></tr>
+<tr><td>` / 1 / 2 / 3 / 4</td><td>all / r / g / b / a 채널</td></tr>
 </tbody></table>
 </div>
 <h2 id="keyframe"><a class="header" href="#keyframe">Keyframe</a></h2>
@@ -322,7 +327,7 @@
 <tr><td>$HIPNAME</td><td>hip파일의 확장명을 제외한 파일명 hello.hip =&gt; hello</td></tr>
 <tr><td>$HIP</td><td>hip 파일이 저장된 절대경로</td></tr>
 <tr><td>$JOB</td><td>project 절대경로 ( File &gt; New Project )</td></tr>
-<tr><td>$HFS</td><td>The path where Houdini is installed. Houdini reads the configuration information from $HFS/houdini.</td></tr>
+<tr><td>$HFS</td><td><code>H</code>oudini <code>F</code>ile <code>S</code>ystem. The path where Houdini is installed. Houdini reads the configuration information from $HFS/houdini.</td></tr>
 <tr><td>$HH</td><td>The path to Houdini supporting scripts and files inside $HFS. Usually $HFS/houdini</td></tr>
 <tr><td>$HHP</td><td>The path to Houdini’s python libraries. This will differ depending on the version of python that Houdini is built with. For example $HH/python3.7libs.</td></tr>
 </tbody></table>
@@ -441,8 +446,8 @@
 </ul>
 <div class="table-wrapper"><table><thead><tr><th>노드</th><th></th></tr></thead><tbody>
 <tr><td>Add</td><td>점 추가 // 모델에서 점만 남기기, 점으로 선만들기</td></tr>
-<tr><td>Ends</td><td>Face/Hull 탭과 같은 기능입니다</td></tr>
-<tr><td>Peak</td><td>Peak 노드는 프리미티브/포인트/에지/브레이크 포인트를 법선 방향으로 이동합니다</td></tr>
+<tr><td>Ends</td><td>Face/Hull 탭과 같은 기능. // Close U: Unroll with Shared Points로 면 없에기</td></tr>
+<tr><td>Peak</td><td>노말 방향으로 이동</td></tr>
 <tr><td>Transform</td><td>트랜스폼 - 전체/그룹 // Move Centeroid To Origin도 유용</td></tr>
 <tr><td>Edit</td><td>트렌스폼 -  컴포넌트 단위</td></tr>
 <tr><td>Delete</td><td>지우기 - 기능 더 많음    // 패턴 및 start/end // 중간에 있는 점의 노말을 살려야할시 v@N = cross(v@up, v@side)</td></tr>
@@ -450,7 +455,7 @@
 <tr><td>Poly Extrude</td><td>밀어내기(extrude), 그룹핑 가능</td></tr>
 <tr><td>Poly Bevel</td><td>비스듬한면(bevel), 선에 점을 추가하여 아치형으로 변경</td></tr>
 <tr><td>Poly Path</td><td>이어진 여러 라인을 하나의 라인으로 만듬. // 둘러싸여진 라인에서 면을 만듬</td></tr>
-<tr><td>Poly Frame</td><td>TangentName에 N을 넣는. TBN 구하기 // 선의 Tangent를 노말을 할당해서 노말이 선따라 가게</td></tr>
+<tr><td>Poly Frame</td><td>TangentName에 N을 넣는. TBN 구하기 // 선의 Tangent를 노말을 할당해서 노말이 선따라 가게. (N은 포인트 번호가 낮은 방향으로 향하게 된다)</td></tr>
 <tr><td>Poly Fill</td><td>채우기</td></tr>
 <tr><td>Poly Split</td><td>자르기 - Edge Percentage가 유용 // 면을 자를때 좋음</td></tr>
 <tr><td>Poly Cut</td><td>면없에기 // 선따기 좋음</td></tr>
@@ -492,7 +497,7 @@
 <tr><td>Convert</td><td>지오메트리 -  기하학을 변환(ex 폴리곤화) // 라인을 커브로 // LOD</td></tr>
 <tr><td>Remesh</td><td>지오메트리 - 메쉬 늘리기/줄이기</td></tr>
 <tr><td>Remesh to Grid</td><td>merge같이 합친후 하나의 메쉬 처럼 보이도록 할때</td></tr>
-<tr><td>Facet</td><td>지오메트리 - 점 또는 표면 법선을 통합 // remove inline points로 resample한걸 합칠 수 있다. // post-compute normal로 노말만들때도 사용</td></tr>
+<tr><td>Facet</td><td>지오메트리 - 점 또는 표면 노말을 통합 // remove inline points로 resample한걸 합칠 수 있다. // post-compute normal로 노말만들때도 사용</td></tr>
 <tr><td>Fuse</td><td>각 포인트들을 거리나 Snap에 따라 <strong>합치기</strong>. 프리미티브 가운데 찾기. Normal 다시 계산하는게 기본이므로 Remove Affected Normals 확인 하자</td></tr>
 <tr><td>Clean</td><td>겹쳐진 primitive 삭제가능</td></tr>
 <tr><td>Divide</td><td>Don't Generate Slivers/Avoid Small Angles 동시 체크 추천. // Remove Shared Edge 엣지 지우면서 합치기</td></tr>
@@ -529,7 +534,9 @@
 </tbody></table>
 </div>
 <p>Edge Straighten</p>
-<p>Refine</p>
+<p>shrinkwrap 랩핑하기 triangulate2d 랑 비슷한
+Refine</p>
+<p>Chain - Copy To Point랑 비슷한데 start/end 지정할 수 있음.</p>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Merge</td><td>합치기. 필요에 따라 Fuse를 뒤에 붙여 중복 제거</td></tr>
 <tr><td>Soft Transform</td><td>부드러운 곡선</td></tr>
@@ -726,7 +733,7 @@ Labs Trim Texture</p>
 <li>베벌 distance 0.5</li>
 <li>퓨즈</li>
 </ul>
-<h2 id="체우기"><a class="header" href="#체우기">체우기</a></h2>
+<h2 id="채우기"><a class="header" href="#채우기">채우기</a></h2>
 <ul>
 <li>중심축을 정해 transform해서 띄워주고</li>
 <li>mirror - reverse normal : No</li>
@@ -984,13 +991,14 @@ vector4  qmultiply(vector4 q1, vector4 q2)
 <pre><code class="language-vex">point("../OUT_P", 0, "P", 1)  // OUT_P  노드의 0번째의 point P의 Y좌표(xyz / 012)
 npoints(0) // 0번입력의 포인트 갯수
 addpoint // removepoint
+pointattrib - point랑 비슷한데 끝에 success받음. 네이밍이 조금 혼잡하네
 setpointattrib
 setpointgroup
 
 opdigits(".")                 // 현재 노드(".")의 이름의 숫자만 가져옴
 rand(x)                       // 랜덤. 분포가 일정하게 되는데 그럴때 사칙연산을 내부적으로 넣어주기도 함
 
-chramp("radious_ramp", @curveu)    // 기어버튼으로 추가된 radious_ramp curveu의 위치 값을 가져온다
+chramp("radius_ramp", @curveu)    // 기어버튼으로 추가된 radius_ramp curveu의 위치 값을 가져온다
 detail("../META/", "iteration", 0) // META에 있는 iteration의 0번째 값
 
 
@@ -1696,6 +1704,13 @@ Settings
 <li>
 <p>sidefx</p>
 <ul>
+<li>https://github.com/sideeffects/HoudiniEngineForUnity
+<ul>
+<li>https://www.sidefx.com/docs/houdini/unity/pluginapi.html</li>
+<li>https://github.com/sideeffects/HoudiniEngineForUnity/tree/Houdini20.5/Plugins/HoudiniEngineUnity/Scripts/Examples</li>
+<li><a href="https://youtu.be/1qjRWmqbzp8&amp;t=578">Procedural Race Tracks for Mobile Games | Stoyan Dimitrov | GDC 2019</a></li>
+</ul>
+</li>
 <li><a href="https://www.sidefx.com/tutorials/unity-starter-kit/">https://www.sidefx.com/tutorials/unity-starter-kit/</a>
 <ul>
 <li><a href="https://www.sidefx.com/contentlibrary/unity-starter-kit/">https://www.sidefx.com/contentlibrary/unity-starter-kit/</a></li>
@@ -1724,8 +1739,90 @@ Settings
 <h2 id="-2"><a class="header" href="#-2"></a></h2>
 <div class="table-wrapper"><table><thead><tr><th>attr</th><th></th></tr></thead><tbody>
 <tr><td>unity_instance</td><td>point찍고 attr에 프리팝 경로 입력하면 알아서 생성해줌</td></tr>
+<tr><td>unity_material</td><td></td></tr>
 </tbody></table>
-</div><div style="break-before: page; page-break-before: always;"></div><h1 id="unreal"><a class="header" href="#unreal">Unreal</a></h1>
+</div>
+<p>collision_geo Adds a non-convex, non-rendered mesh collider
+rendered_collision_geo Adds a non-convex, rendered mesh collider</p>
+<p>lod</p>
+<ul>
+<li>https://www.sidefx.com/docs/houdini/unity/meshes/lod.html</li>
+</ul>
+<p>lod_screensize</p>
+<p>https://www.sidefx.com/docs/houdini/unity/terrain/scattering.html</p>
+<p>https://docs.unity3d.com/ScriptReference/TerrainData.html
+The TerrainData class stores heightmaps, detail mesh positions, tree instances, and terrain texture alpha maps.
+The Terrain component links to the terrain data and renders it.</p>
+<ul>
+<li>treeInstances</li>
+<li>treePrototypes</li>
+</ul>
+<p>https://docs.unity3d.com/ScriptReference/TreeInstance.html
+Contains information about a tree placed in the Terrain game object.
+This struct can be accessed from the TerrainData Object.
+Description</p>
+<ul>
+<li>color</li>
+<li>heightScale</li>
+<li>lightmapColor</li>
+<li>position</li>
+<li>prototypeIndex</li>
+<li>rotation</li>
+<li>widthScale</li>
+</ul>
+<p>https://docs.unity3d.com/ScriptReference/TreePrototype.html
+Simple class that contains a pointer to a tree prototype.
+This class is used by the TerrainData gameObject.</p>
+<ul>
+<li>bendFactor</li>
+<li>navMeshLod</li>
+<li>prefab</li>
+</ul>
+<p>s@unity_hf_tree_prototype0
+s@unity_hf_tree_prototype1
+s@unity_hf_tree_prototype2</p>
+<p>s@unity_hf_layer_type = "detail";</p>
+<p>s@unity_hf_detail_prototype_texture = "Assets/Race_Track_Tools/Art/Textures/Grass/grass_clump_001.png";
+f@unity_hf_detail_prototype_maxheight = 3;
+f@unity_hf_detail_prototype_maxwidth = 3;
+f@unity_hf_detail_prototype_minheight = 1;
+f@unity_hf_detail_prototype_minwidth = 1;</p>
+<p>f@unity_hf_detail_prototype_bendfactor = 50;
+i@unity_hf_detail_prototype_rendermode = 0;</p>
+<p>i@unity_hf_detail_distance = 200;
+f@unity_hf_detail_density = 1;
+i@unity_hf_detail_resolution_patch = 128;</p>
+<h2 id="체크리스트"><a class="header" href="#체크리스트">체크리스트</a></h2>
+<ul>
+<li>인스턴스
+<ul>
+<li>unity_instance</li>
+</ul>
+</li>
+<li>머티리얼
+<ul>
+<li>unity_material</li>
+</ul>
+</li>
+<li>컬리전
+<ul>
+<li>collision_geo</li>
+<li>rendered_collision_geo</li>
+</ul>
+</li>
+<li>LOD
+<ul>
+<li>lod_0</li>
+<li>lod_screensize</li>
+</ul>
+</li>
+<li>식생같은 경우
+<ul>
+<li>unity_hf_tree_prototype1</li>
+</ul>
+</li>
+</ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="unreal"><a class="header" href="#unreal">Unreal</a></h1>
 <ul>
 <li><a href="https://www.sidefx.com/tutorials/ue4-starter-kit/">UNREAL STARTER KIT</a></li>
 <li><a href="https://docs.unrealengine.com/5.0/ko/city-sample-quick-start-for-generating-a-city-and-freeway-using-houdini/">도시 샘플 퀵스타트 - Houdini를 사용해 도시와 고속도로 만들기</a>
@@ -2613,7 +2710,7 @@ detail:
 <li>Connect Adjacent Pieces - 이렇게 하면 primitive갯수가 늘어나버림
 <ul>
 <li>Adjacent Points</li>
-<li>Search Radious: 10</li>
+<li>Search Radius: 10</li>
 </ul>
 </li>
 <li>Convert Line</li>
@@ -2682,7 +2779,7 @@ detail:
 </ul>
 <h3 id="6--use-trimsheet-textures"><a class="header" href="#6--use-trimsheet-textures">6 | Use Trimsheet Textures</a></h3>
 <ul>
-<li>Sweap에서 Compute UVs</li>
+<li>Sweep에서 Compute UVs</li>
 </ul>
 <p>UV를 수평으로</p>
 <ul>
@@ -3758,6 +3855,8 @@ PROJECT TITAN GPT SIGNAGE</p>
 </ul>
 </li>
 </ul>
+<p><a href="https://www.youtube.com/watch?v=NfizT369g60">Procedural World Generation of Ubisoft’s Far Cry 5 | Etienne Carrier | Houdini HIVE Utrecht</a>
+<a href="https://www.youtube.com/watch?v=FodXp5BkENk">Building the World of 'The Ascent'</a></p>
 <h2 id="p"><a class="header" href="#p">P</a></h2>
 <ul>
 <li>
@@ -3978,6 +4077,19 @@ PROJECT TITAN GPT SIGNAGE</p>
 <li><a href="https://www.youtube.com/watch?v=DbIKoNfSSGc">블리자드 배경아티스트 귬규영 -2부-</a></li>
 <li>https://www.artstation.com/peter_k_lee</li>
 </ul>
+<h3 id="matthew-vitalone"><a class="header" href="#matthew-vitalone">Matthew Vitalone</a></h3>
+<ul>
+<li><a href="https://vimeo.com/261901539">Creating Real-Time Oceans for Call of Duty: WWII | Matt Vitalone | GDC 2018</a>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=mMKViq1Bv8M">youtube</a></li>
+</ul>
+</li>
+</ul>
+<h3 id="radu-cius"><a class="header" href="#radu-cius">Radu Cius</a></h3>
+<ul>
+<li><a href="https://www.artstation.com/raducius">https://www.artstation.com/raducius</a></li>
+<li><a href="https://rart.gumroad.com/">https://rart.gumroad.com/</a></li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="ta"><a class="header" href="#ta">TA</a></h1>
 <ul>
 <li><a href="https://www.zhihu.com/people/iiiiiiiffffffffffff">iiiiiiiffffffffffff</a></li>
@@ -3985,6 +4097,15 @@ PROJECT TITAN GPT SIGNAGE</p>
 <li><a href="https://reveron3d.com/about-me/">Adolfo Reverón</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="팁"><a class="header" href="#팁">팁</a></h1>
+<h3 id="점-선-면"><a class="header" href="#점-선-면">점 선 면</a></h3>
+<p>면/선 =&gt; 점
+Add - Delete Geometry But Keep the Points</p>
+<p>면 =&gt; 선
+Ends - Close U: Unroll with New Points
+Convert Line</p>
+<p>선 =&gt; 면
+Skin</p>
+<p>Poly Fill</p>
 <h3 id="아이콘모양-변경-유지"><a class="header" href="#아이콘모양-변경-유지">아이콘모양 변경 유지</a></h3>
 <p>C/Z로 컬러/모양을 띄우고 Ctrl을 누른후 드래그 드랍으로 노드를 변경하면 나중 노드들도 반영됨.</p>
 <h3 id="자동-저장-횟수"><a class="header" href="#자동-저장-횟수">자동 저장 횟수</a></h3>
@@ -4306,7 +4427,7 @@ matrix m = rotation_matrix * location_matrix;
 </ul>
 <h3 id="라인의-양쪽-선-구하기"><a class="header" href="#라인의-양쪽-선-구하기">라인의 양쪽 선 구하기</a></h3>
 <ul>
-<li>Sweap
+<li>Sweep
 <ul>
 <li>Surface Shape : Ribbon</li>
 <li>Columns : 1</li>
@@ -4409,6 +4530,44 @@ else
 </li>
 </ul>
 <hr />
+<h2 id="주의"><a class="header" href="#주의">주의</a></h2>
+<ul>
+<li>파라미터에서 그룹과 관련된 수식 넣을때 주의
+<ul>
+<li>Blast// Group: <code>@Cd.r==0</code>와 <code>@Cd.r == 0</code>과는 다름</li>
+</ul>
+</li>
+<li>그룹 날라가는 노드
+<ul>
+<li>Carve</li>
+</ul>
+</li>
+</ul>
+<h2 id="그룹"><a class="header" href="#그룹">그룹</a></h2>
+<div class="table-wrapper"><table><thead><tr><th>타입</th><th>프리픽스</th><th>예시</th></tr></thead><tbody>
+<tr><td>primitive</td><td>gr_pr_</td><td>gr_pr_building, gr_pr_tree</td></tr>
+<tr><td>point</td><td>gr_pt_</td><td>gr_pt_crowd, gr_pt_dust</td></tr>
+<tr><td>vertex</td><td>gr_vt_</td><td>gr_vt_borders, gr_vt_seams</td></tr>
+<tr><td>edge</td><td>gr_ed_</td><td>gr_ed_support, gr_ed_bevel</td></tr>
+</tbody></table>
+</div>
+<h2 id="trouble-shoot"><a class="header" href="#trouble-shoot">trouble shoot</a></h2>
+<ul>
+<li>HeightField에서 흰색판이 보이는 문제
+<ul>
+<li>벌칸렌더러의 문제로 보임
+<ul>
+<li>https://www.reddit.com/r/Houdini/comments/1jloe5r/random_white_plane_using_terrainheightfield_tools/</li>
+</ul>
+</li>
+<li>Edit &gt; Preferences &gt; 3D Viewports
+<ul>
+<li>Renderer : OpenGL 로 변경</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="노드-1"><a class="header" href="#노드-1">노드</a></h1>
 <h2 id="add"><a class="header" href="#add">Add</a></h2>
 <ul>
@@ -4488,6 +4647,11 @@ else
 <ul>
 <li>Second U : 1 - ch("domainu1")</li>
 </ul>
+<h3 id="선에서-가운데점만-뽑기"><a class="header" href="#선에서-가운데점만-뽑기">선에서 가운데점만 뽑기</a></h3>
+<ul>
+<li>First U : 0.5</li>
+<li>Extract 탭 선택</li>
+</ul>
 <h2 id="group"><a class="header" href="#group">Group</a></h2>
 <h3 id="group의-이름을-노드의-이름으로"><a class="header" href="#group의-이름을-노드의-이름으로">Group의 이름을 노드의 이름으로</a></h3>
 <ul>
@@ -4546,10 +4710,6 @@ else
 <li>Facet으로 Remove Inline Points 하거나</li>
 <li>Refine으로 Unrefine탭 사용</li>
 </ul>
-<h2 id="sweep"><a class="header" href="#sweep">Sweep</a></h2>
-<ul>
-<li>Surface Shape : Ribbon / Columns: 1로하면 라인따라 트랙모양으로 변함</li>
-</ul>
 <h2 id="띄엄띄엄-선"><a class="header" href="#띄엄띄엄-선">띄엄띄엄 선</a></h2>
 <ul>
 <li>라인을 Resample</li>
@@ -4561,12 +4721,128 @@ else
 </ul>
 </li>
 </ul>
+<h2 id="라인에-원하는-수만큼-점-추가"><a class="header" href="#라인에-원하는-수만큼-점-추가">라인에 원하는 수만큼 점 추가</a></h2>
+<ul>
+<li>Resample
+<ul>
+<li>Maximum Segment Length 체크해제</li>
+<li>Maximum Segments 체크하기</li>
+</ul>
+</li>
+</ul>
+<h2 id="링형을-sweep시-시작-끝을-부분이-끊기는-현상-해결-open-curve-issue"><a class="header" href="#링형을-sweep시-시작-끝을-부분이-끊기는-현상-해결-open-curve-issue">링형을 sweep시 시작-끝을 부분이 끊기는 현상 해결 (Open Curve Issue)</a></h2>
+<ul>
+<li>
+<p>방법 1</p>
+<ul>
+<li>시작-끝 부분을 이어버리는것</li>
+<li>Fuse / PolyFrame / Sweep</li>
+</ul>
+</li>
+<li>
+<p>방법 2</p>
+<ul>
+<li>시작-끝 부분의 노말을 동기화</li>
+<li>PolyFrame 으로 선의 Tangent를 노말을 할당해서 노말이 선따라 가게하고
+<ul>
+<li>TangentName: N</li>
+</ul>
+</li>
+<li>Wrangle (detail) 로 끝점의 노말을 시작 점의 노말로 셋팅한다
+<pre><code class="language-vex">vector first_N = point(0, "N", 0);
+int last_pnt = npoints(0) - 1;
+setpointattrib(0, "N", last_pnt, first_N);
+</code></pre>
+</li>
+<li>Sweep</li>
+</ul>
+</li>
+<li>
+<p>원인</p>
+<ul>
+<li>Fuse를 안했거나</li>
+<li>Ends에서 Unroll with New Points로 새 포인트를 넣을 경우</li>
+</ul>
+</li>
+</ul>
+<h2 id="링-2개-사이-채우기"><a class="header" href="#링-2개-사이-채우기">링 2개 사이 채우기</a></h2>
+<p>링 하나가 프리미티브 하나라고 가정</p>
+<ul>
+<li>Group: Edges 으로 A/B를 지정</li>
+<li>Merge</li>
+<li>Poly Bridge
+<ul>
+<li>Group : A
+<ul>
+<li>Divide Into : Individual Elements</li>
+<li>Reverse Winding</li>
+</ul>
+</li>
+<li>Group : B
+<ul>
+<li>Divide Into : Individual Elements</li>
+<li>Reverse Winding</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<h2 id="라인-점에서-선마다-프리미티브-붙이기"><a class="header" href="#라인-점에서-선마다-프리미티브-붙이기">라인 점에서 선마다 프리미티브 붙이기</a></h2>
+<ul>
+<li>Convert Line을 사용하거나</li>
+<li>Carv를 이용함
+<ul>
+<li>First U : 0</li>
+<li>Second U : 1</li>
+<li>Break Points
+<ul>
+<li>Cut At Internal U Breakpoints</li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+<h2 id="스택"><a class="header" href="#스택">스택</a></h2>
+<ul>
+<li>Copy And Transform
+<ul>
+<li>Translate.y : bbox(0, D_YSIZE)</li>
+</ul>
+</li>
+</ul>
+<h2 id="uv-texture"><a class="header" href="#uv-texture">UV Texture</a></h2>
+<p>Texture Type : Arc Length Spline
+Attribute Class : Point
+Scale.x : arclen(0, 0, 0, 1)</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="vex-1"><a class="header" href="#vex-1">Vex</a></h1>
 <h3 id="자잘한-팁"><a class="header" href="#자잘한-팁">자잘한 팁</a></h3>
 <ul>
 <li>switch같은곳은 작아서 Ctrl+E로 확대해서 편집하자</li>
 <li>if(a==b, 1, 2) 같은 식으로 넣을 수 도 있음.</li>
 </ul>
+<h3 id="ramp이용한-프로파일"><a class="header" href="#ramp이용한-프로파일">Ramp이용한 프로파일</a></h3>
+<p>1번 오리지날</p>
+<pre><code class="language-vex">int point_arr[];
+
+float profile = chramp("profile", 1);
+int pointCount = chi("./profile");
+
+for (int i = 1; i &lt;= pointCount; ++i)
+{
+    float p_pos = ch("./profile" + itoa(i) + "pos");
+    float p_val = ch("./profile" + itoa(i) + "value");
+    int new_point = addpoint(0, set(p_pos, p_val, 0));
+    append(point_arr, new_point);
+}
+
+addprim(0, "polyline", point_arr);
+</code></pre>
+<p>2번 - 간편</p>
+<pre><code class="language-vex">// 간편한 버전 Line - Resample 후
+float perc = (float)@ptnum / (@numpt - 1);
+float ramp = chramp("ramp", perc);
+@P.y = y;
+</code></pre>
 <h3 id="현재-노드-이름"><a class="header" href="#현재-노드-이름">현재 노드 이름</a></h3>
 <pre><code class="language-vex">string current_node_name = split(opfullpath("."), "/")[-1]; // $OS
 </code></pre>
@@ -4610,6 +4886,13 @@ dir = normalize(dir);
 v@right = cross(dir, {0, 1, 0});
 v@up = cross(v@right, @N);
 </code></pre>
+<h3 id="find_reveresed_prims"><a class="header" href="#find_reveresed_prims">find_reveresed_prims</a></h3>
+<pre><code class="language-vex">vector nrm = primuv(0, "N", @primnum, {0.5,0.5,0});
+if(nrm.y &lt; 0)
+{
+    i@group_reverse = 1;
+}
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="플러그인"><a class="header" href="#플러그인">플러그인</a></h1>
 <ul>
 <li><a href="http://cgtoolbox.com/houdini-expression-editor/">외부에디터</a></li>
@@ -4643,8 +4926,9 @@ parameter presets</p>
 <tr><td>erode</td><td>침식/풍화 되다</td><td></td></tr>
 <tr><td>slump</td><td>침체/무너진</td><td></td></tr>
 <tr><td>sediment</td><td>침전/퇴적물</td><td></td></tr>
-<tr><td>debris</td><td>잔해/쓰레기</td><td></td></tr>
+<tr><td>debris</td><td>지형이 무너질 때 생기는 잔해/쓰레기</td><td></td></tr>
 <tr><td>bedrock</td><td>기반/기반암</td><td></td></tr>
+<tr><td>sweep</td><td>쓸기/ 휘두름</td><td></td></tr>
 </tbody></table>
 </div>
 <hr />
@@ -4666,6 +4950,23 @@ Skew - 왜곡하다, 비스듬히 움직이다</p>
 <p>topology 폴리곤 구조와 배열
 retopology 토폴리지 재구성
 principled - 절조 있는, 원칙에 입각한</p>
+<p>ridge - 등 / 봉우리 / 튀어나온 부분</p>
+<p>Angle of repose : 안식각, 휴식각 또는 임계 안식각. 이 각도에서 경사면의 재료는 미끄러지기 직전이다.</p>
+<p>spherify - 구형화하다
+trunk - 나무의 몸통</p>
+<ul>
+<li>isosurface
+<ul>
+<li>등치선의 3차원 형태이며, 3차원에서 일정한 스칼라 값(예: 압력, 온도, 속도, 밀도)을 갖는 점들의 모임을 나타내는 연속된 표면이다. 등가면은 컴퓨터 그래픽의 주요 주제이며, 특히 전산 유체 역학에서 시각화 방법으로 자주 사용된다.</li>
+<li>iso- → 같다, 동일하다 (equal)</li>
+<li>surface → 표면, 면 (surface)</li>
+<li>그래서 isosurface란 → "어떤 3D 공간 안에서 특정 값이 동일한 지점을 연결한 면" 을 말해.</li>
+</ul>
+</li>
+</ul>
+<p>isometry - 등거리 변환
+sliver - (깨지거나 잘라 낸) 조각 - Divide 노드</p>
+<p>pre (미리) + fabricated (제작된)</p>
 <div style="break-before: page; page-break-before: always;"></div><ul>
 <li>https://www.sidefx.com/faq/question/houdini-engine-plugin-free-for-unity-and-ue4/</li>
 </ul>
