deploy: 38938cc0308bff6ea198bb3a41d44e708425db9c

--- a/control/key.html
+++ b/control/key.html
@@ -191,6 +191,7 @@
 <tr><td></td><td>Shift + 드래그</td><td>선택 - 추가</td></tr>
 <tr><td></td><td>Ctrl + 드래그</td><td>선택 - 해제</td></tr>
 <tr><td></td><td>C</td><td>메뉴</td></tr>
+<tr><td></td><td>Ctrl + Shift + 2 / 3/ 4</td><td>선택 변경</td></tr>
 <tr><td>카메라 모드</td><td>ESC</td><td>View Tool</td></tr>
 <tr><td>Viewport</td><td>1</td><td>Viewport - perspective</td></tr>
 <tr><td></td><td>2</td><td>Viewport - Top</td></tr>
@@ -214,12 +215,17 @@
 <tr><td></td><td>ALT + 쉬프트 + W</td><td>새로운 창</td></tr>
 </tbody></table>
 </div>
+<p>https://www.sidefx.com/docs/houdini/basics/radialmenus.html
+X Snapping controls
+C The “Current” menu. You can choose the menu on this key using the  Radial switching menu at the top of the main interface.
+V View controls</p>
 <h2 id="object-view"><a class="header" href="#object-view">Object View</a></h2>
 <ul>
 <li>https://www.sidefx.com/docs/houdini/network/wire.html</li>
 </ul>
 <div class="table-wrapper"><table><thead><tr><th>Object View</th><th></th></tr></thead><tbody>
 <tr><td>Y</td><td>가위자르기</td></tr>
+<tr><td>J + 드래그</td><td>선따라 라인 생성</td></tr>
 <tr><td>P</td><td>프로퍼티 보기</td></tr>
 <tr><td>U</td><td>상위 노드로 이동 (<code>U</code>p)</td></tr>
 <tr><td>O</td><td>네트워크 오버뷰</td></tr>
@@ -238,6 +244,8 @@
 <tr><td>Ctrl + I</td><td>Background Images: Enable/Disable    // Shift + I 혹은 Labs &gt; Sticker Placer</td></tr>
 <tr><td>Ctrl + F</td><td>노드 찾기</td></tr>
 <tr><td>Alt</td><td>선을 끌어당기고 있는 상태에서 이음 노드 추가.</td></tr>
+<tr><td>Page Up / Page Down</td><td>윗노드 / 아랫노드</td></tr>
+<tr><td>Ctrl + 숫자</td><td>노드에 단축키 지정. 숫자로 이동가능하게 됨</td></tr>
 </tbody></table>
 </div>
 <ul>
