--- a/etc/english_word.html
+++ b/etc/english_word.html
@@ -184,7 +184,7 @@
 <tr><td>sweep</td><td>쓸기/ 휘두름</td><td></td></tr>
 </tbody></table>
 </div>
-<hr />
+<h2 id="crease---주름-주름이-생기게-하다"><a class="header" href="#crease---주름-주름이-생기게-하다">crease - 주름, 주름이 생기게 하다</a></h2>
 <p>Ledge - (벽에서 튀어나온) 선반, 돌출부.
 Beam - 기둥
 Truss - 트러스(지붕·교량 따위를 버티기 위해 떠받치는 구조물)
@@ -220,6 +220,10 @@ trunk - 나무의 몸통</p>
 <p>isometry - 등거리 변환
 sliver - (깨지거나 잘라 낸) 조각 - Divide 노드</p>
 <p>pre (미리) + fabricated (제작된)</p>
+<p>skirt 1.	(가장자리를) 두르다
+dilate - 확장[팽창]하다[시키다], 키우다[커지다]
+Splat - A splat map is a texture which controls blending of multiple textures (or other values) across a model.
+scaffolding 높은 곳에서 작업할 수 있게 가설(임시로 설치)한 플랫폼 혹은 구조물</p>
 
                     </main>
 
