--- a/etc/recipe.html
+++ b/etc/recipe.html
@@ -164,6 +164,7 @@
                         <h1 id="recipes"><a class="header" href="#recipes"><a href="https://www.sidefx.com/docs/houdini/network/recipes.html">Recipes</a></a></h1>
 <p>Recipes: saving and recreating node and parameter presets</p>
 <p>Windows &gt; Recipe Manager</p>
+<p>%HOME%/houdini{version}/otls/Recipes.hdanc</p>
 <p>노드 선택 &gt; Recipes
 &gt; Save Selected Items as Tool...
 &gt; Save Selected Items as Decoration...
@@ -172,6 +173,7 @@
 decorations
 parameter presets</p>
 <p><a href="https://youtu.be/SBIhd9rpf7Y">Baking Sexy Recipes | Attila Torok | Houdini 20.5 HIVE Paris</a></p>
+<p><a href="https://www.youtube.com/watch?v=o1xg202Rbg8">Getting Started with Recipes | Houdini 20.5</a></p>
 
                     </main>
 
