--- a/etc/reference.html
+++ b/etc/reference.html
@@ -243,6 +243,7 @@
 </ul>
 <p><a href="https://www.youtube.com/watch?v=NfizT369g60">Procedural World Generation of Ubisoft’s Far Cry 5 | Etienne Carrier | Houdini HIVE Utrecht</a>
 <a href="https://www.youtube.com/watch?v=FodXp5BkENk">Building the World of 'The Ascent'</a></p>
+<p><a href="https://www.youtube.com/playlist?list=PLv8HciXoFYX8xGBC8ufmNamFdUMT0fhHf">Houdini  Tutorials - Pixel Fondue</a></p>
 <h2 id="p"><a class="header" href="#p">P</a></h2>
 <ul>
 <li>
@@ -257,6 +258,15 @@
 <li>Simon is a tech Artist that loves building procedural tools and assets.</li>
 <li>https://www.youtube.com/@simonhoudini5074</li>
 <li>https://www.artstation.com/siver</li>
+<li>https://siver.gumroad.com/</li>
+</ul>
+</li>
+<li>
+<p>Simon Trümpler</p>
+<ul>
+<li>https://80.lv/articles/006sdf-river-simulation-with-simonschreibt/</li>
+<li>https://www.youtube.com/@HoudiniSimon/</li>
+<li>https://simonschreibt.de/</li>
 </ul>
 </li>
 <li>
@@ -435,6 +445,7 @@
 <p><a href="https://www.youtube.com/watch?v=emeTkdTQgGA">[NDC21-비주얼아트&amp;사운드] Making Hard Surface Easy</a></p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=HZd4hQJ2MfA">Embark Asset Processor | Erik Hallberg | GDC HIVE 2023</a></li>
+<li>참고 <a href="https://www.youtube.com/watch?v=l5XRaL1eN_8">Creating Procedural Welding Seams In Houdini</a></li>
 </ul>
 </li>
 <li>
@@ -452,6 +463,25 @@
 </ul>
 </li>
 </ul>
+<p>로우폴리 작업
+하이폴리 대비
+만들기 쉬움
+UV작업 쉬움
+하이폴리에서 로우폴리로 전환시 날카롭거나 평평한 면이 뭉개지는 경우가 있음.
+불린작업
+원통형 나사
+원형 패임
+나사 생성
+나무 덧댈 영역 + 나무 조각낼 평면
+용접할 영역이 있는 박스
+손잡이의 주름영역
+접합부 casting seam
+커스텀 UV 함수
+sharp edge 분리 - 보기 좋은 노말맵 만들기 위해
+Torus/pipe에서 적절한 seam 찾기
+외곡된 uv는 따로 분리해서 경계지점을 찾고 최단거리로 자름
+기울어진 uv영역은 서로 평행이거나, 가장긴 직선을 찾아내서 기울임 제거
+머티리얼, 크기, AO가능 여부를 판별해서 uv영역 겹치기</p>
 <h3 id="paul-ambrosiussen"><a class="header" href="#paul-ambrosiussen">Paul Ambrosiussen</a></h3>
 <ul>
 <li>https://www.youtube.com/@paulambrosiussen/videos</li>
