--- a/etc/snippet.html
+++ b/etc/snippet.html
@@ -162,6 +162,10 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="팁"><a class="header" href="#팁">팁</a></h1>
+<h3 id="fbx-머티리얼별-색칠"><a class="header" href="#fbx-머티리얼별-색칠">FBX 머티리얼별 색칠</a></h3>
+<p>파일로 fbx불러오고
+파티션 Rule : $MAT하면 머티리얼별로 그룹이 생김.
+Color로 해당 그룹 색칠</p>
 <h3 id="점-선-면"><a class="header" href="#점-선-면">점 선 면</a></h3>
 <p>면/선 =&gt; 점
 Add - Delete Geometry But Keep the Points</p>
