--- a/node/geometry/geo_node.html
+++ b/node/geometry/geo_node.html
@@ -209,7 +209,8 @@
 <tr><td>Normal</td><td>노말 - 스무스 효과 가능 Cusp Angle이 작을수록 하드, 클수록 소프트</td></tr>
 <tr><td>Boolean</td><td>교집 - 교집합/합집합</td></tr>
 <tr><td>Clip</td><td>clipping - 반으로 자르는거</td></tr>
-<tr><td>ROP Geometry Ouput</td><td>캐쉬 - 생성 $HIP/geo/$OS.bgeo.sc // $OS. Operator String 노드이름</td></tr>
+<tr><td>ROP FBX Output</td><td>.fbx 내보내기</td></tr>
+<tr><td>ROP Geometry Ouput</td><td>캐쉬 - 생성 $HIP/geo/$OS.bgeo.sc // $OS. Operator String 노드이름  // .obj내보내기</td></tr>
 <tr><td>File</td><td>캐쉬 - 불러오기</td></tr>
 <tr><td>File Cache</td><td>캐쉬 - 생성 / 불러오기 - 기능이 2개라 햇갈려서 잘 쓰지 않음</td></tr>
 <tr><td>Attribute Create</td><td>Attribute - 생성 // 그룹에 대한 attribute 생성도 가능  // $PR 할당할때</td></tr>
@@ -275,7 +276,8 @@
 <p>Edge Straighten</p>
 <p>shrinkwrap 랩핑하기 triangulate2d 랑 비슷한
 Refine</p>
-<p>Chain - Copy To Point랑 비슷한데 start/end 지정할 수 있음.</p>
+<p>Chain - Copy To Point랑 비슷한데 start/end 지정할 수 있음.
+Box Cutter</p>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Merge</td><td>합치기. 필요에 따라 Fuse를 뒤에 붙여 중복 제거</td></tr>
 <tr><td>Soft Transform</td><td>부드러운 곡선</td></tr>
@@ -344,6 +346,10 @@ https://www.sidefx.com/docs/houdini/nodes/sop/block_end.html</p>
 <tr><td>Merge Each Iteration</td><td></td></tr>
 </tbody></table>
 </div>
+<h2 id="-1"><a class="header" href="#-1"></a></h2>
+<p>Decal Projector
+https://www.sidefx.com/docs/houdini/nodes/sop/labs--decal_projector.html</p>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
