--- a/script/python.html
+++ b/script/python.html
@@ -390,6 +390,72 @@ def onInputChanged
 OnInputChanged
 kwargs['node'].hm().onInputChanged(kwargs) # hm - a shortcut for self.hdaModule(). - https://www.sidefx.com/docs/houdini/hom/hou/OpNode.html#hm</p>
 <p>hou.phm().SomeFunction()                     # hou.phm() == hou.pwd().hdaModule()</p>
+<hr />
+<p>Tool scripts
+https://www.sidefx.com/docs/houdini/hom/tool_script.html</p>
+<p>Writing custom viewer states in Python
+https://www.sidefx.com/docs/houdini/hom/python_states.html</p>
+<p>상태등록</p>
+<ul>
+<li>Houdini는 시작 시 createViewerStateTemplate상태 템플릿에 접근하여 등록을 수행합니다.</li>
+</ul>
+<p>viewerstate.utilsHoudini는 뷰어 상태 설치를 지원하고 사용자가 직접 상태를 구현할 수 있도록 다양한 문서화된 유틸리티 함수와 클래스를 포함하는 Python 모듈을 제공합니다.
+이 모듈은 $HHP/viewerstate폴더 아래에 있습니다.</p>
+<pre><code class="language-python">class MyState(object):
+  # 생성자는 필수
+  def __init__(self, state_name, scene_viewer):
+        self.state_name = state_name
+        self.scene_viewer = scene_viewer
+
+# onEnter
+# onInterrupt
+# onExit
+# onResume
+# onGenerate
+# 
+# onMouseEvent
+# onMouseDoubleClickEvent
+# onMouseWheelEvent
+# 
+# onKeyEvent
+# onKeyTransitEvent
+# 
+# onMenuAction
+# onMenuPreOpen
+# 
+# onParmChangeEvent
+# onPlaybackChangeEvent
+# onCommand
+# 
+# onHandleToState
+# onStateToHandle
+# onBeginHandleToState
+# onEndHandleToState
+# 
+# onStartSelection
+# onSelection
+# onStopSelection
+# onLocateSelection
+# 
+# onDragTest
+# onDropGetOptions
+# onDropAccept
+# 
+# onDraw
+# onDrawInterrupt
+
+def createViewerStateTemplate():
+    state_typename = kwargs["type"].definition().sections()["DefaultState"].contents() # Edit Operator Type Properties &gt; Node &gt; Default State
+    state_label = "Label"
+    state_cat = hou.sopNodeTypeCategory()
+
+    template = hou.ViewerStateTemplate(state_typename, state_label, state_cat)
+    template.bindFactory(MyState)
+    template.bindIcon(kwargs["type"].icon())
+
+    return template
+
+</code></pre>
 
                     </main>
 
