--- a/technic/VAT.html
+++ b/technic/VAT.html
@@ -254,7 +254,7 @@ parm {
 <h2 id="rigidbody"><a class="header" href="#rigidbody">Rigidbody</a></h2>
 <pre><code class="language-node">Geo
     Sphere
-    RDB Material Fracture
+    RBD Material Fracture
     UV Unwrap
     Assemble
     RBD Bullet Solver
