--- a/node/geometry/uv.html
+++ b/node/geometry/uv.html
@@ -167,8 +167,8 @@
 <tr><td>Group</td><td></td></tr>
 </tbody></table>
 </div><div class="table-wrapper"><table><thead><tr><th>UV Create</th><th></th></tr></thead><tbody>
-<tr><td>UV Project</td><td>프로젝션 기법을 이용하여 UV 전개</td></tr>
-<tr><td>UV Flatten</td><td>flattening constraints// Seam(이음매), Rectify(바로잡다)</td></tr>
+<tr><td>UV Project</td><td>프로젝션 기법을 이용하여 UV 전개. 복잡한 봉같은 건 그룹(Boundary)로 자르고 원통형 Cylinder</td></tr>
+<tr><td>UV Flatten</td><td>flattening constraints// Seam(이음매), Rectify(바로잡다) 잘 활용</td></tr>
 <tr><td>AutoUV</td><td>SideFXLab 에 통합됨</td></tr>
 <tr><td>UV Unwrap</td><td>자동 uv 평탄화 및 구릅핑</td></tr>
 <tr><td>UV Texture</td><td>평면은 물론, 구형이나 원통형을 UV 전개</td></tr>
@@ -180,7 +180,7 @@
 <tr><td>UV Edit</td><td></td></tr>
 <tr><td>UV Transform</td><td></td></tr>
 <tr><td>UV Fuse</td><td></td></tr>
-<tr><td>UV Layout</td><td>uv 그룹 배치</td></tr>
+<tr><td>UV Layout</td><td>uv 그룹 배치 - Scale Islands to Match Their Surface Areas</td></tr>
 <tr><td>UV Smooth</td><td></td></tr>
 <tr><td>UV Brush</td><td></td></tr>
 <tr><td>Labs UV Unitize</td><td></td></tr>
@@ -266,6 +266,8 @@ Labs Trim Texture</p>
 <p><a href="https://www.technical-artist.net/?p=111">https://www.technical-artist.net/?p=111</a></p>
 </li>
 </ul>
+<p><a href="https://www.youtube.com/watch?v=pas33fBP8Dg">Split UV shells</a></p>
+<p><a href="https://www.youtube.com/watch?v=Phz3BTwFWRg">Houdini Tutorial: Closed Sweep Spline and keep UVs</a></p>
 
                     </main>
 
