--- a/print.html
+++ b/print.html
@@ -201,6 +201,7 @@
 <tr><td></td><td>Shift + 드래그</td><td>선택 - 추가</td></tr>
 <tr><td></td><td>Ctrl + 드래그</td><td>선택 - 해제</td></tr>
 <tr><td></td><td>C</td><td>메뉴</td></tr>
+<tr><td></td><td>Ctrl + Shift + 2 / 3/ 4</td><td>선택 변경</td></tr>
 <tr><td>카메라 모드</td><td>ESC</td><td>View Tool</td></tr>
 <tr><td>Viewport</td><td>1</td><td>Viewport - perspective</td></tr>
 <tr><td></td><td>2</td><td>Viewport - Top</td></tr>
@@ -224,12 +225,17 @@
 <tr><td></td><td>ALT + 쉬프트 + W</td><td>새로운 창</td></tr>
 </tbody></table>
 </div>
+<p>https://www.sidefx.com/docs/houdini/basics/radialmenus.html
+X Snapping controls
+C The “Current” menu. You can choose the menu on this key using the  Radial switching menu at the top of the main interface.
+V View controls</p>
 <h2 id="object-view"><a class="header" href="#object-view">Object View</a></h2>
 <ul>
 <li>https://www.sidefx.com/docs/houdini/network/wire.html</li>
 </ul>
 <div class="table-wrapper"><table><thead><tr><th>Object View</th><th></th></tr></thead><tbody>
 <tr><td>Y</td><td>가위자르기</td></tr>
+<tr><td>J + 드래그</td><td>선따라 라인 생성</td></tr>
 <tr><td>P</td><td>프로퍼티 보기</td></tr>
 <tr><td>U</td><td>상위 노드로 이동 (<code>U</code>p)</td></tr>
 <tr><td>O</td><td>네트워크 오버뷰</td></tr>
@@ -248,6 +254,8 @@
 <tr><td>Ctrl + I</td><td>Background Images: Enable/Disable    // Shift + I 혹은 Labs &gt; Sticker Placer</td></tr>
 <tr><td>Ctrl + F</td><td>노드 찾기</td></tr>
 <tr><td>Alt</td><td>선을 끌어당기고 있는 상태에서 이음 노드 추가.</td></tr>
+<tr><td>Page Up / Page Down</td><td>윗노드 / 아랫노드</td></tr>
+<tr><td>Ctrl + 숫자</td><td>노드에 단축키 지정. 숫자로 이동가능하게 됨</td></tr>
 </tbody></table>
 </div>
 <ul>
@@ -470,7 +478,8 @@
 <tr><td>Normal</td><td>노말 - 스무스 효과 가능 Cusp Angle이 작을수록 하드, 클수록 소프트</td></tr>
 <tr><td>Boolean</td><td>교집 - 교집합/합집합</td></tr>
 <tr><td>Clip</td><td>clipping - 반으로 자르는거</td></tr>
-<tr><td>ROP Geometry Ouput</td><td>캐쉬 - 생성 $HIP/geo/$OS.bgeo.sc // $OS. Operator String 노드이름</td></tr>
+<tr><td>ROP FBX Output</td><td>.fbx 내보내기</td></tr>
+<tr><td>ROP Geometry Ouput</td><td>캐쉬 - 생성 $HIP/geo/$OS.bgeo.sc // $OS. Operator String 노드이름  // .obj내보내기</td></tr>
 <tr><td>File</td><td>캐쉬 - 불러오기</td></tr>
 <tr><td>File Cache</td><td>캐쉬 - 생성 / 불러오기 - 기능이 2개라 햇갈려서 잘 쓰지 않음</td></tr>
 <tr><td>Attribute Create</td><td>Attribute - 생성 // 그룹에 대한 attribute 생성도 가능  // $PR 할당할때</td></tr>
@@ -536,7 +545,8 @@
 <p>Edge Straighten</p>
 <p>shrinkwrap 랩핑하기 triangulate2d 랑 비슷한
 Refine</p>
-<p>Chain - Copy To Point랑 비슷한데 start/end 지정할 수 있음.</p>
+<p>Chain - Copy To Point랑 비슷한데 start/end 지정할 수 있음.
+Box Cutter</p>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>Merge</td><td>합치기. 필요에 따라 Fuse를 뒤에 붙여 중복 제거</td></tr>
 <tr><td>Soft Transform</td><td>부드러운 곡선</td></tr>
@@ -604,14 +614,18 @@ https://www.sidefx.com/docs/houdini/nodes/sop/block_end.html</p>
 <tr><td>Feadback Each Iteration</td><td></td></tr>
 <tr><td>Merge Each Iteration</td><td></td></tr>
 </tbody></table>
-</div><div style="break-before: page; page-break-before: always;"></div><h1 id="uv"><a class="header" href="#uv">UV</a></h1>
+</div>
+<h2 id="-1"><a class="header" href="#-1"></a></h2>
+<p>Decal Projector
+https://www.sidefx.com/docs/houdini/nodes/sop/labs--decal_projector.html</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="uv"><a class="header" href="#uv">UV</a></h1>
 <div class="table-wrapper"><table><thead><tr><th>Seams 경계선</th><th></th></tr></thead><tbody>
 <tr><td>UV Autoseam</td><td></td></tr>
 <tr><td>Group</td><td></td></tr>
 </tbody></table>
 </div><div class="table-wrapper"><table><thead><tr><th>UV Create</th><th></th></tr></thead><tbody>
-<tr><td>UV Project</td><td>프로젝션 기법을 이용하여 UV 전개</td></tr>
-<tr><td>UV Flatten</td><td>flattening constraints// Seam(이음매), Rectify(바로잡다)</td></tr>
+<tr><td>UV Project</td><td>프로젝션 기법을 이용하여 UV 전개. 복잡한 봉같은 건 그룹(Boundary)로 자르고 원통형 Cylinder</td></tr>
+<tr><td>UV Flatten</td><td>flattening constraints// Seam(이음매), Rectify(바로잡다) 잘 활용</td></tr>
 <tr><td>AutoUV</td><td>SideFXLab 에 통합됨</td></tr>
 <tr><td>UV Unwrap</td><td>자동 uv 평탄화 및 구릅핑</td></tr>
 <tr><td>UV Texture</td><td>평면은 물론, 구형이나 원통형을 UV 전개</td></tr>
@@ -623,7 +637,7 @@ https://www.sidefx.com/docs/houdini/nodes/sop/block_end.html</p>
 <tr><td>UV Edit</td><td></td></tr>
 <tr><td>UV Transform</td><td></td></tr>
 <tr><td>UV Fuse</td><td></td></tr>
-<tr><td>UV Layout</td><td>uv 그룹 배치</td></tr>
+<tr><td>UV Layout</td><td>uv 그룹 배치 - Scale Islands to Match Their Surface Areas</td></tr>
 <tr><td>UV Smooth</td><td></td></tr>
 <tr><td>UV Brush</td><td></td></tr>
 <tr><td>Labs UV Unitize</td><td></td></tr>
@@ -709,6 +723,8 @@ Labs Trim Texture</p>
 <p><a href="https://www.technical-artist.net/?p=111">https://www.technical-artist.net/?p=111</a></p>
 </li>
 </ul>
+<p><a href="https://www.youtube.com/watch?v=pas33fBP8Dg">Split UV shells</a></p>
+<p><a href="https://www.youtube.com/watch?v=Phz3BTwFWRg">Houdini Tutorial: Closed Sweep Spline and keep UVs</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="step"><a class="header" href="#step">Step</a></h1>
 <ul>
 <li><a href="https://www.sidefx.com/docs/houdini/io/ocio.html">https://www.sidefx.com/docs/houdini/io/ocio.html</a></li>
@@ -853,7 +869,7 @@ vector next = x0 + dir * (dist / 2.0f);
 
 @P = next;
 </code></pre>
-<h2 id="-1"><a class="header" href="#-1">@</a></h2>
+<h2 id="-2"><a class="header" href="#-2">@</a></h2>
 <h2 id="xx"><a class="header" href="#xx">xx</a></h2>
 <pre><code class="language-vex">
 @P                     =&gt; points
@@ -1458,6 +1474,72 @@ def onInputChanged
 OnInputChanged
 kwargs['node'].hm().onInputChanged(kwargs) # hm - a shortcut for self.hdaModule(). - https://www.sidefx.com/docs/houdini/hom/hou/OpNode.html#hm</p>
 <p>hou.phm().SomeFunction()                     # hou.phm() == hou.pwd().hdaModule()</p>
+<hr />
+<p>Tool scripts
+https://www.sidefx.com/docs/houdini/hom/tool_script.html</p>
+<p>Writing custom viewer states in Python
+https://www.sidefx.com/docs/houdini/hom/python_states.html</p>
+<p>상태등록</p>
+<ul>
+<li>Houdini는 시작 시 createViewerStateTemplate상태 템플릿에 접근하여 등록을 수행합니다.</li>
+</ul>
+<p>viewerstate.utilsHoudini는 뷰어 상태 설치를 지원하고 사용자가 직접 상태를 구현할 수 있도록 다양한 문서화된 유틸리티 함수와 클래스를 포함하는 Python 모듈을 제공합니다.
+이 모듈은 $HHP/viewerstate폴더 아래에 있습니다.</p>
+<pre><code class="language-python">class MyState(object):
+  # 생성자는 필수
+  def __init__(self, state_name, scene_viewer):
+        self.state_name = state_name
+        self.scene_viewer = scene_viewer
+
+# onEnter
+# onInterrupt
+# onExit
+# onResume
+# onGenerate
+# 
+# onMouseEvent
+# onMouseDoubleClickEvent
+# onMouseWheelEvent
+# 
+# onKeyEvent
+# onKeyTransitEvent
+# 
+# onMenuAction
+# onMenuPreOpen
+# 
+# onParmChangeEvent
+# onPlaybackChangeEvent
+# onCommand
+# 
+# onHandleToState
+# onStateToHandle
+# onBeginHandleToState
+# onEndHandleToState
+# 
+# onStartSelection
+# onSelection
+# onStopSelection
+# onLocateSelection
+# 
+# onDragTest
+# onDropGetOptions
+# onDropAccept
+# 
+# onDraw
+# onDrawInterrupt
+
+def createViewerStateTemplate():
+    state_typename = kwargs["type"].definition().sections()["DefaultState"].contents() # Edit Operator Type Properties &gt; Node &gt; Default State
+    state_label = "Label"
+    state_cat = hou.sopNodeTypeCategory()
+
+    template = hou.ViewerStateTemplate(state_typename, state_label, state_cat)
+    template.bindFactory(MyState)
+    template.bindIcon(kwargs["type"].icon())
+
+    return template
+
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="hscript-expressions"><a class="header" href="#hscript-expressions">HScript expressions</a></h1>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
 <tr><td>$N</td><td>'npoints(0)-1</td></tr>
@@ -1656,7 +1738,7 @@ parm {
 <h2 id="rigidbody"><a class="header" href="#rigidbody">Rigidbody</a></h2>
 <pre><code class="language-node">Geo
     Sphere
-    RDB Material Fracture
+    RBD Material Fracture
     UV Unwrap
     Assemble
     RBD Bullet Solver
@@ -1736,7 +1818,7 @@ Settings
 <p>https://www.sidefx.com/docs/houdini/unity/instancing.html</p>
 </li>
 </ul>
-<h2 id="-2"><a class="header" href="#-2"></a></h2>
+<h2 id="-3"><a class="header" href="#-3"></a></h2>
 <div class="table-wrapper"><table><thead><tr><th>attr</th><th></th></tr></thead><tbody>
 <tr><td>unity_instance</td><td>point찍고 attr에 프리팝 경로 입력하면 알아서 생성해줌</td></tr>
 <tr><td>unity_material</td><td></td></tr>
@@ -2838,6 +2920,7 @@ PROJECT TITAN GPT SIGNAGE</p>
 <ul>
 <li><a href="https://www.sidefx.com/tutorials/unity-starter-kit/">UNITY STARTER KIT</a>
 <ul>
+<li>https://www.youtube.com/playlist?list=PLXNFA1EysfYl0noIUdMUSsG-TOpkm0-CQ</li>
 <li>여러 툴들 소계</li>
 </ul>
 </li>
@@ -3857,6 +3940,7 @@ PROJECT TITAN GPT SIGNAGE</p>
 </ul>
 <p><a href="https://www.youtube.com/watch?v=NfizT369g60">Procedural World Generation of Ubisoft’s Far Cry 5 | Etienne Carrier | Houdini HIVE Utrecht</a>
 <a href="https://www.youtube.com/watch?v=FodXp5BkENk">Building the World of 'The Ascent'</a></p>
+<p><a href="https://www.youtube.com/playlist?list=PLv8HciXoFYX8xGBC8ufmNamFdUMT0fhHf">Houdini  Tutorials - Pixel Fondue</a></p>
 <h2 id="p"><a class="header" href="#p">P</a></h2>
 <ul>
 <li>
@@ -3871,6 +3955,15 @@ PROJECT TITAN GPT SIGNAGE</p>
 <li>Simon is a tech Artist that loves building procedural tools and assets.</li>
 <li>https://www.youtube.com/@simonhoudini5074</li>
 <li>https://www.artstation.com/siver</li>
+<li>https://siver.gumroad.com/</li>
+</ul>
+</li>
+<li>
+<p>Simon Trümpler</p>
+<ul>
+<li>https://80.lv/articles/006sdf-river-simulation-with-simonschreibt/</li>
+<li>https://www.youtube.com/@HoudiniSimon/</li>
+<li>https://simonschreibt.de/</li>
 </ul>
 </li>
 <li>
@@ -3943,7 +4036,7 @@ PROJECT TITAN GPT SIGNAGE</p>
 </li>
 <li>https://www.pluralsight.com/courses/houdini-engine-unity-fundamentals</li>
 </ul>
-<h2 id="-3"><a class="header" href="#-3">???</a></h2>
+<h2 id="-4"><a class="header" href="#-4">???</a></h2>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=YMOGLxNs0Jk">Houdini Tutorial Edge Damage</a></li>
 <li><a href="https://houdinist.tistory.com/category/%ED%9B%84%EB%94%94%EB%8B%88%20%ED%8A%9C%ED%86%A0%EB%A6%AC%EC%96%BC%20%EC%86%8C%EA%B0%9C">https://houdinist.tistory.com/category/후디니%20튜토리얼%20소개</a></li>
@@ -4027,7 +4120,7 @@ PROJECT TITAN GPT SIGNAGE</p>
 </ul>
 </li>
 </ul>
-<h2 id="-4"><a class="header" href="#-4"></a></h2>
+<h2 id="-5"><a class="header" href="#-5"></a></h2>
 <p>https://www.appliedhoudini.com/</p>
 <h2 id="indie-pixel"><a class="header" href="#indie-pixel">indie pixel</a></h2>
 <ul>
@@ -4049,6 +4142,7 @@ PROJECT TITAN GPT SIGNAGE</p>
 <p><a href="https://www.youtube.com/watch?v=emeTkdTQgGA">[NDC21-비주얼아트&amp;사운드] Making Hard Surface Easy</a></p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=HZd4hQJ2MfA">Embark Asset Processor | Erik Hallberg | GDC HIVE 2023</a></li>
+<li>참고 <a href="https://www.youtube.com/watch?v=l5XRaL1eN_8">Creating Procedural Welding Seams In Houdini</a></li>
 </ul>
 </li>
 <li>
@@ -4066,6 +4160,25 @@ PROJECT TITAN GPT SIGNAGE</p>
 </ul>
 </li>
 </ul>
+<p>로우폴리 작업
+하이폴리 대비
+만들기 쉬움
+UV작업 쉬움
+하이폴리에서 로우폴리로 전환시 날카롭거나 평평한 면이 뭉개지는 경우가 있음.
+불린작업
+원통형 나사
+원형 패임
+나사 생성
+나무 덧댈 영역 + 나무 조각낼 평면
+용접할 영역이 있는 박스
+손잡이의 주름영역
+접합부 casting seam
+커스텀 UV 함수
+sharp edge 분리 - 보기 좋은 노말맵 만들기 위해
+Torus/pipe에서 적절한 seam 찾기
+외곡된 uv는 따로 분리해서 경계지점을 찾고 최단거리로 자름
+기울어진 uv영역은 서로 평행이거나, 가장긴 직선을 찾아내서 기울임 제거
+머티리얼, 크기, AO가능 여부를 판별해서 uv영역 겹치기</p>
 <h3 id="paul-ambrosiussen"><a class="header" href="#paul-ambrosiussen">Paul Ambrosiussen</a></h3>
 <ul>
 <li>https://www.youtube.com/@paulambrosiussen/videos</li>
@@ -4097,6 +4210,10 @@ PROJECT TITAN GPT SIGNAGE</p>
 <li><a href="https://reveron3d.com/about-me/">Adolfo Reverón</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="팁"><a class="header" href="#팁">팁</a></h1>
+<h3 id="fbx-머티리얼별-색칠"><a class="header" href="#fbx-머티리얼별-색칠">FBX 머티리얼별 색칠</a></h3>
+<p>파일로 fbx불러오고
+파티션 Rule : $MAT하면 머티리얼별로 그룹이 생김.
+Color로 해당 그룹 색칠</p>
 <h3 id="점-선-면"><a class="header" href="#점-선-면">점 선 면</a></h3>
 <p>면/선 =&gt; 점
 Add - Delete Geometry But Keep the Points</p>
@@ -4814,6 +4931,14 @@ setpointattrib(0, "N", last_pnt, first_N);
 <p>Texture Type : Arc Length Spline
 Attribute Class : Point
 Scale.x : arclen(0, 0, 0, 1)</p>
+<h2 id="poly-wire"><a class="header" href="#poly-wire">Poly Wire</a></h2>
+<p>Edit Parameter Interface - Ramp(wradious)랑 Float(radious_mult)추가하고
+Wire Radious: chramp("wradious", $BBY, 0) * chf("radious_mult");</p>
+<h2 id="에너지실드같은-벌집모양"><a class="header" href="#에너지실드같은-벌집모양">에너지실드같은 벌집모양</a></h2>
+<p>Sphere만들고, Divide에서 Compute Dual체크</p>
+<h2 id="rdb"><a class="header" href="#rdb">RDB</a></h2>
+<p>글자같은건 RBD Pack 하면 좋음</p>
+<p>RBD Bullet Solver 에서 Collision - Ground Collision: Ground Plane 가 있음.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="vex-1"><a class="header" href="#vex-1">Vex</a></h1>
 <h3 id="자잘한-팁"><a class="header" href="#자잘한-팁">자잘한 팁</a></h3>
 <ul>
@@ -4900,6 +5025,7 @@ if(nrm.y &lt; 0)
 <div style="break-before: page; page-break-before: always;"></div><h1 id="recipes"><a class="header" href="#recipes"><a href="https://www.sidefx.com/docs/houdini/network/recipes.html">Recipes</a></a></h1>
 <p>Recipes: saving and recreating node and parameter presets</p>
 <p>Windows &gt; Recipe Manager</p>
+<p>%HOME%/houdini{version}/otls/Recipes.hdanc</p>
 <p>노드 선택 &gt; Recipes
 &gt; Save Selected Items as Tool...
 &gt; Save Selected Items as Decoration...
@@ -4908,6 +5034,7 @@ if(nrm.y &lt; 0)
 decorations
 parameter presets</p>
 <p><a href="https://youtu.be/SBIhd9rpf7Y">Baking Sexy Recipes | Attila Torok | Houdini 20.5 HIVE Paris</a></p>
+<p><a href="https://www.youtube.com/watch?v=o1xg202Rbg8">Getting Started with Recipes | Houdini 20.5</a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="단어장"><a class="header" href="#단어장">단어장</a></h1>
 <h2 id="후디니"><a class="header" href="#후디니">후디니</a></h2>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th><th></th></tr></thead><tbody>
@@ -4931,7 +5058,7 @@ parameter presets</p>
 <tr><td>sweep</td><td>쓸기/ 휘두름</td><td></td></tr>
 </tbody></table>
 </div>
-<hr />
+<h2 id="crease---주름-주름이-생기게-하다"><a class="header" href="#crease---주름-주름이-생기게-하다">crease - 주름, 주름이 생기게 하다</a></h2>
 <p>Ledge - (벽에서 튀어나온) 선반, 돌출부.
 Beam - 기둥
 Truss - 트러스(지붕·교량 따위를 버티기 위해 떠받치는 구조물)
@@ -4967,6 +5094,10 @@ trunk - 나무의 몸통</p>
 <p>isometry - 등거리 변환
 sliver - (깨지거나 잘라 낸) 조각 - Divide 노드</p>
 <p>pre (미리) + fabricated (제작된)</p>
+<p>skirt 1.	(가장자리를) 두르다
+dilate - 확장[팽창]하다[시키다], 키우다[커지다]
+Splat - A splat map is a texture which controls blending of multiple textures (or other values) across a model.
+scaffolding 높은 곳에서 작업할 수 있게 가설(임시로 설치)한 플랫폼 혹은 구조물</p>
 <div style="break-before: page; page-break-before: always;"></div><ul>
 <li>https://www.sidefx.com/faq/question/houdini-engine-plugin-free-for-unity-and-ue4/</li>
 </ul>
