deploy: 74b06a4ac2801f8b89ff1068c1e17a33f410f4c5

--- a/control/key.html
+++ b/control/key.html
@@ -241,7 +241,8 @@ V View controls</p>
 <tr><td>Shift + O</td><td>Network Box</td></tr>
 <tr><td>Shift + P</td><td>Sticky 노트</td></tr>
 <tr><td>Shift</td><td>Shft키를 누르고 노드를 움직이면 상위노드들도 같이 이동</td></tr>
-<tr><td>Ctrl + I</td><td>Background Images: Enable/Disable    // Shift + I 혹은 Labs &gt; Sticker Placer</td></tr>
+<tr><td>Shift + I</td><td>이미지 추가</td></tr>
+<tr><td>Ctrl + I</td><td>Edit Background Images: Enable/Disable</td></tr>
 <tr><td>Ctrl + F</td><td>노드 찾기</td></tr>
 <tr><td>Alt</td><td>선을 끌어당기고 있는 상태에서 이음 노드 추가.</td></tr>
 <tr><td>Page Up / Page Down</td><td>윗노드 / 아랫노드</td></tr>
