--- a/etc/english_word.html
+++ b/etc/english_word.html
@@ -224,6 +224,10 @@ sliver - (깨지거나 잘라 낸) 조각 - Divide 노드</p>
 dilate - 확장[팽창]하다[시키다], 키우다[커지다]
 Splat - A splat map is a texture which controls blending of multiple textures (or other values) across a model.
 scaffolding 높은 곳에서 작업할 수 있게 가설(임시로 설치)한 플랫폼 혹은 구조물</p>
+<p>Rebar (철근)
+Steel Reinforcement (강철 보강재)
+Reinforcing Bar (보강 바)
+concave - 오목한 (↔convex)</p>
 
                     </main>
 
