--- a/tutorial/project_titan.html
+++ b/tutorial/project_titan.html
@@ -162,14 +162,27 @@
                 <div id="content" class="content">
                     <main>
                         <ul>
-<li>PROJECT TITAN https://www.sidefx.com/titan/
+<li>PROJECT TITAN
 <ul>
-<li>배경</li>
+<li>https://www.sidefx.com/titan/</li>
+<li>도시 배경</li>
 </ul>
 </li>
-<li>PROJECT PEGASUS https://www.sidefx.com/pegasus/
+<li>PROJECT PEGASUS
 <ul>
-<li>지형</li>
+<li>https://www.sidefx.com/pegasus/</li>
+<li>산 지형</li>
+</ul>
+</li>
+<li>PROJECT GROT
+<ul>
+<li>https://www.sidefx.com/learn-main-menu/tech-demos/project-grot/</li>
+<li>용암 지형</li>
+</ul>
+</li>
+<li>PROJECT VITRUVIUS
+<ul>
+<li>??</li>
 </ul>
 </li>
 </ul>
